--- a/global.css
+++ b/global.css
@@ -9,10 +9,11 @@
 
 :root {
   --primary: #23443f;
-  --secondary: #f0f0f0;
+  --secondary: #f3f4ea;
   --text-color: #333;
   --background-color: #f7f9f8;
   --white: #ffffff;
+  --black: #000;
 }
 
 /* Estilos globais */
@@ -23,10 +24,9 @@ body {
 }
 
 h1,
-h2,
-h3 {
+h2 {
+  font-family: "Pinyon Script", cursive;
 }
-
 img {
   max-width: 100%;
   height: auto;
