--- a/pages/Localizacao/styles.css
+++ b/pages/Localizacao/styles.css
@@ -1,12 +1,13 @@
-.gift-list-container {
+.location-container {
   text-align: center;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   background-color: transparent;
   border-radius: 10px;
 }
+
 .background-flower {
   position: fixed;
   bottom: -500px;
@@ -32,8 +33,8 @@
   .background-flower {
     position: fixed;
     bottom: -10%;
-    right: -30%; 
-    width: 50%; 
+    right: -30%;
+    width: 50%;
     height: auto;
     opacity: 0.3;
     pointer-events: none;
@@ -42,9 +43,9 @@
 
   .background-flower-left {
     position: fixed;
-    bottom: -10%; 
+    bottom: -10%;
     left: -30%;
-    width: 50%; 
+    width: 50%;
     height: auto;
     opacity: 0.3;
     pointer-events: none;
@@ -60,54 +61,21 @@
   text-align: center;
 }
 
-.flipped-image {
-  transform: scaleX(-1);
+.map-container {
+  margin-top: 20px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.gift-list-items {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-.gift-list-item {
-  background-color: var(--white);
-  padding: 15px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  width: 200px;
-}
-
-.gift-list-item img {
-  width: 100%;
-  height: 150px;
-  object-fit: contain;
-  border-radius: 5px;
-  background-color: transparent;
-}
-
-.gift-list-item-title {
-  font-size: 14px;
-  margin: 10px 0;
-}
-
-.gift-list-item-description {
+.location-info {
+  margin-top: 20px;
   font-size: 18px;
+  color: var(--primary);
   font-weight: bold;
-  margin-bottom: 10px;
 }
 
-.gift-list-item button {
-  background-color: var(--primary);
-  color: #fff;
-  border: none;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.gift-list-item button:hover {
-  background-color: #ccc;
+.gift-list-footer {
+  margin-top: 20px;
+  font-size: 16px;
+  color: var(--secondary);
 }
