--- a/pages/Presenca/styles.css
+++ b/pages/Presenca/styles.css
@@ -109,3 +109,18 @@ button:hover {
   color: var(--primary);
   font-weight: bold;
 }
+
+.confirm-button {
+  background-color: var(--primary);
+  color: white;
+  padding: 12px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 20px 0;
+}
+
+.confirm-button:hover {
+  background-color: #ccc;
+}
