--- a/global.css
+++ b/global.css
@@ -9,14 +9,14 @@
 
 :root {
   --primary: #23443f;
-  --secondary: #f3f4ea;
+  --primary-opacity: #82907d;
+  --secondary: #f9f7f7;
   --text-color: #333;
   --background-color: #f7f9f8;
   --white: #ffffff;
   --black: #000;
 }
 
-/* Estilos globais */
 body {
   font-family: Arial, sans-serif;
   background-color: var(--background-color);
@@ -25,7 +25,7 @@ body {
 
 h1,
 h2 {
-  font-family: "Pinyon Script", cursive;
+  font-family: "Quicksand", cursive;
 }
 img {
   max-width: 100%;
@@ -41,4 +41,39 @@ a {
   margin: 0 auto;
   padding: 20px;
   max-width: 1200px;
+}
+
+.title {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title h1 {
+  font-family: "Quicksand", sans-serif;
+
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 40px;
+  color: var(--primary);
+  margin-bottom: 40px;
+}
+
+.title h2 {
+  font-family: "Quicksand", serif;
+  font-weight: 100;
+  font-size: 40px;
+  line-height: 40px;
+  color: var(--black);
+}
+
+.title p {
+  font-family: "Quicksand", serif;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 23px;
+  color: var(--primary);
+  margin-top: 20px;
 }
