--- a/pages/Presentes/styles.css
+++ b/pages/Presentes/styles.css
@@ -32,8 +32,8 @@
   .background-flower {
     position: fixed;
     bottom: -10%;
-    right: -30%; 
-    width: 50%; 
+    right: -30%;
+    width: 50%;
     height: auto;
     opacity: 0.3;
     pointer-events: none;
@@ -42,9 +42,9 @@
 
   .background-flower-left {
     position: fixed;
-    bottom: -10%; 
+    bottom: -10%;
     left: -30%;
-    width: 50%; 
+    width: 50%;
     height: auto;
     opacity: 0.3;
     pointer-events: none;
@@ -54,10 +54,32 @@
 }
 
 .main-title {
-  font-weight: 700;
-  font-size: 40px;
+  font-family: "Quicksand", serif;
+
+  font-weight: 500;
+  font-size: 20px;
   color: var(--primary);
   text-align: center;
+}
+
+.main-title h1 {
+  font-family: "Quicksand", sans-serif;
+
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 40px;
+  color: var(--primary);
+  margin-bottom: 40px;
+}
+
+.main-title-description {
+  font-family: "Quicksand", serif;
+
+  font-weight: 200;
+  font-size: 12px;
+  color: var(--black);
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .flipped-image {
@@ -91,12 +113,21 @@
 .gift-list-item-title {
   font-size: 14px;
   margin: 10px 0;
+  font-family: "Quicksand", sans-serif;
 }
 
 .gift-list-item-description {
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 10px;
+  font-family: "Quicksand", sans-serif;
+}
+
+.gift-list-item-description-paragraf {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  font-family: "Quicksand", sans-serif;
 }
 
 .gift-list-item button {
@@ -110,4 +141,19 @@
 
 .gift-list-item button:hover {
   background-color: #ccc;
+}
+
+.gift-list-footer {
+  width: 100%;
+  display: flex;
+  margin-top: 40px;
+}
+
+.gift-list-footer p {
+  font-family: "Quicksand", serif;
+  font-weight: 100;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--black);
+  text-align: center;
 }
