--- a/css/global.css
+++ b/css/global.css
@@ -76,3 +76,19 @@ a {
   color: var(--primary);
   margin-top: 20px;
 }
+
+.back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 20px;
+  color: var(--primary);
+  text-decoration: none;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.back-arrow:hover {
+  color: var(--primary);
+}
