--- a/css/presentes.css
+++ b/css/presentes.css
@@ -6,6 +6,7 @@
   padding: 20px;
   background-color: transparent;
   border-radius: 10px;
+  margin-top: 40px;
 }
 .background-flower {
   position: fixed;
