--- a/css/global.css
+++ b/css/global.css
@@ -49,8 +49,9 @@ input {
 
 .container {
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px;
   max-width: 1200px;
+  padding-bottom: 140px;
 }
 
 .title {
@@ -129,7 +130,7 @@ input {
 }
 /* Ajuste da container de presentes */
 .container-presentes {
-  width: 100%;
+  flex: 1;
   max-width: 600px;
   margin: 0 auto;
   display: flex;
@@ -137,7 +138,7 @@ input {
   align-items: center;
   justify-content: flex-start;
   text-align: center;
-  padding-top: 50px;
+  margin-top: 200px;
 }
 
 .gift-list-container {
@@ -288,7 +289,7 @@ input {
 /*Localizacao*/
 .location-container {
   width: 100%;
-  margin: 20px auto;
+  margin-top: 100px;
 }
 
 .location-map-image {
