--- a/css/home.css
+++ b/css/home.css
@@ -19,6 +19,7 @@ body {
 .container {
   text-align: center;
   width: 100%;
+  height: 100%;
   max-width: 600px;
   margin: 0 20px;
   display: none;
