--- a/css/global.css
+++ b/css/global.css
@@ -281,6 +281,10 @@ input {
 .location-container {
   width: 100%;
   margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .location-map-image {
